<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_orange"
    >

    <TextView
        android:id="@+id/random_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:text="@string/random_title"
        style="@style/random_title"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        />

    <TextView
        android:id="@+id/random_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/random_title"
        android:layout_alignLeft="@+id/random_title"
        android:layout_alignRight="@+id/random_title"
        android:text="@string/random_subtitle"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/meal_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/random_subtitle"
        android:layout_marginLeft="50dp"
        android:text="@string/filter_meal"
        style="@style/random_txt"
        />

    <TextView
        android:id="@+id/type_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/meal_menu"
        android:layout_alignLeft="@+id/meal_menu"
        android:text="@string/filter_type"
        style="@style/random_txt"
        />

    <TextView
        android:id="@+id/serving_size_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type_menu"
        android:layout_alignLeft="@+id/meal_menu"
        android:text="@string/filter_serving_size"
        style="@style/random_txt"
        />

    <TextView
        android:id="@+id/main_dish_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serving_size_menu"
        android:layout_alignLeft="@+id/meal_menu"
        android:text="@string/filter_main_dish"
        style="@style/random_txt"
        />

    <TextView
        android:id="@+id/difficulty_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_dish_menu"
        android:layout_alignLeft="@+id/meal_menu"
        android:text="@string/filter_difficulty"
        style="@style/random_txt"
        />

    <TextView
        android:id="@+id/user_rating_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficulty_menu"
        android:layout_alignLeft="@+id/meal_menu"
        android:text="@string/filter_user_rating"
        style="@style/random_txt"
        />

    <TextView
        android:id="@+id/time_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_rating_menu"
        android:layout_alignLeft="@+id/meal_menu"
        android:text="@string/filter_time"
        style="@style/random_txt"
        />

    <TextView
        android:id="@+id/additional_tag_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_menu"
        android:layout_alignLeft="@+id/meal_menu"
        android:text="@string/filter_additional_tags"
        style="@style/random_txt"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/random_title"
        android:layout_alignRight="@+id/random_title"
        android:layout_below="@+id/additional_tag_menu"
        android:text="@string/randomize"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/text_color"
        android:textSize="36sp"
        android:textAllCaps="true"
        android:layout_marginTop="15dp"

        />



</RelativeLayout>